src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_global_variables.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: a: Ambiguous global variable.
  ┌─ <internal>:3:13
  │
3 │             a: INT;
  │             ^ a: Ambiguous global variable.
  ·
9 │             a: BOOL;
  │             - see also

error[E004]: a: Ambiguous global variable.
  ┌─ <internal>:9:13
  │
3 │             a: INT;
  │             - see also
  ·
9 │             a: BOOL;
  │             ^ a: Ambiguous global variable.
